[gd_scene load_steps=14 format=3 uid="uid://c3057xsnq11lq"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_07jwv"]
[ext_resource type="Texture2D" uid="uid://dnisut2j0lohn" path="res://sprites/dungeon tilemap.png" id="2_gr3lw"]
[ext_resource type="PackedScene" uid="uid://bffj27bdkwpnw" path="res://scenes/damage_taker.tscn" id="3_63fsy"]
[ext_resource type="PackedScene" uid="uid://c2amf5pks6fkh" path="res://scenes/health_bar.tscn" id="4_li2g4"]
[ext_resource type="Theme" uid="uid://c7pmv0x8csomh" path="res://resources/ui_theme.tres" id="5_rk6pc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_sd3x0"]
atlas = ExtResource("2_gr3lw")
region = Rect2(0, 119, 16, 16)
margin = Rect2(0, 0, 1, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_dp3yv"]
atlas = ExtResource("2_gr3lw")
region = Rect2(153, 170, 16, 16)

[sub_resource type="CircleShape2D" id="CircleShape2D_8hmex"]
radius = 7.07107

[sub_resource type="Animation" id="Animation_pydda"]
resource_name = "death"

[sub_resource type="Animation" id="Animation_d2ows"]
resource_name = "hit"

[sub_resource type="Animation" id="Animation_p4062"]
resource_name = "idle"
loop_mode = 1

[sub_resource type="AnimationLibrary" id="AnimationLibrary_33105"]
_data = {
"death": SubResource("Animation_pydda"),
"hit": SubResource("Animation_d2ows"),
"idle": SubResource("Animation_p4062")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_57lv6"]
radius = 8.06226

[node name="Player" type="RigidBody2D"]
collision_layer = 3
lock_rotation = true
script = ExtResource("1_07jwv")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0.5, -7.5)
texture = SubResource("AtlasTexture_sd3x0")

[node name="Hand Rotation" type="Node2D" parent="Sprite2D"]

[node name="Hand" type="Marker2D" parent="Sprite2D/Hand Rotation"]
position = Vector2(11, 0)

[node name="Sprite2D" type="Sprite2D" parent="Sprite2D/Hand Rotation/Hand"]
texture = SubResource("AtlasTexture_dp3yv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0.5, -7.5)
shape = SubResource("CircleShape2D_8hmex")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_33105")
}
autoplay = "idle"

[node name="SpellCooldown" type="Timer" parent="."]
one_shot = true

[node name="DamageTaker" parent="." instance=ExtResource("3_63fsy")]
position = Vector2(1, -7)

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageTaker"]
shape = SubResource("CircleShape2D_57lv6")
debug_color = Color(0, 0.651266, 0.0154943, 0.42)

[node name="HealthBar" parent="." instance=ExtResource("4_li2g4")]
position = Vector2(-13, 2)

[node name="Container" type="CenterContainer" parent="."]
offset_left = -80.0
offset_top = -76.0
offset_right = 78.0
offset_bottom = -19.0

[node name="SpeechLabel" type="Label" parent="Container"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(165.12, 0)
layout_mode = 2
theme = ExtResource("5_rk6pc")
theme_override_font_sizes/font_size = 8
text = "Test text here  lalsladflskadfj sdjl ksadfj klsdfj sakldfj ksld sdlka kd   ksdlj klsad  klsd lksd fjkl sa lkd jf sakdlfj s"
horizontal_alignment = 1
autowrap_mode = 3
visible_characters = 101
visible_ratio = 0.83

[connection signal="timeout" from="SpellCooldown" to="." method="_on_spell_cooldown_timeout"]
[connection signal="damage_taken" from="DamageTaker" to="." method="_on__damage_taken"]
